syntax = "proto3";

package endpoints.flunky.simulator;

option java_multiple_files = true;
option java_outer_classname = "Client";
option java_package = "de.flunkyteam.endpoints.projects.simulator";


service ClientService{
  rpc ClientStream(ClientStreamReq) returns (stream ClientStreamResp);
}

message ClientStreamReq{

}

message ClientStreamResp{
  oneof event_oneof {
    ClientRegisterd clientRegisterd = 1;
    AliveChallenge aliveChallenge = 2;
  }
}

message ClientRegisterd{
  string secret = 1;
}

message AliveChallenge{}